Added Hibernate and FlyWay. Updated main entities.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/mywallet
+spring.datasource.username=romansulymka
+spring.datasource.password=admin
 
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.data.jpa.repositories.enabled=true
+
+#Flyway
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=admin
+spring.flyway.schemas=public
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.locations=db/migration
