--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
+      - name: List files in target directory
+        run: ls target
+        
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         
