--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,19 @@
-name: ci
+name: CI/CD Workflow
 
 on: 
   push:
     branches:
       - 'master'
+    pull_request:
+      branches:
+        - 'master'
 
 jobs:
   super-lint:
     name: Lint code base
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
       - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -17,7 +21,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
+        run: mvn clean install
         
       - name: List files in target directory
         run: ls target
