--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -1,9 +1,10 @@
-name: CI/CD Workflow When Created PR
+name: CI/CD Workflow
 
-on: 
+on:
   push:
-    branches:
-      - 'master'
+    pull_request:
+      branches:
+        - 'master'
 
 jobs:
   super-lint:
@@ -19,22 +20,22 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn clean install
-        
+
       - name: List files in target directory
         run: ls target
-        
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
