--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
     <description>spring-mentee-project</description>
     <properties>
         <java.version>17</java.version>
-        <flyway.user>romansulymka</flyway.user>
-        <flyway.password>admin</flyway.password>
+        <flyway.user>postgres</flyway.user>
+        <flyway.password>mysecretpassword</flyway.password>
         <flyway.schemas>public</flyway.schemas>
     </properties>
     <dependencies>
@@ -150,11 +150,15 @@
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>8.5.13</version>
                 <configuration>
-                    <user>romansulymka</user>
-                    <password>admin</password>
+                    <user>postgres</user>
+                    <password>mysecretpassword</password>
+                    <url>jdbc:postgresql://localhost:5432/mywallet</url>
                     <schemas>
                         <schema>public</schema>
                     </schemas>
+                    <locations>
+                        <location>filesystem:src/main/resources/db/migration</location>
+                    </locations>
                 </configuration>
             </plugin>
             <plugin>
