--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/mywallet
-spring.datasource.username=romansulymka
-spring.datasource.password=admin
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
 
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
@@ -12,7 +12,7 @@ spring.data.jpa.repositories.enabled=true
 
 #Flyway
 spring.flyway.user=${spring.datasource.username}
-spring.flyway.password=admin
+spring.flyway.password=mysecretpassword
 spring.flyway.schemas=public
 spring.flyway.url=${spring.datasource.url}
 spring.flyway.locations=db/migration
