--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -43,6 +43,7 @@ jobs:
         env:
           POSTGRES_HOST: postgres
           POSTGRES_PORT: 5432
+          JWT_SECRET_KEY: 7134743777397A24432646294A404E635266556A586E3272357538782F412544
 
       - name: List files in target directory
         run: ls target
