--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -17,8 +17,8 @@ jobs:
         image: postgres:13.3
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: mysecretpassword
-          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: admin
+          POSTGRES_USER: romansulymka
           POSTGRES_DB: mywallet
           ##add hostname {postgres}
         # Set health checks to wait until postgres has started
@@ -48,22 +48,18 @@ jobs:
       - name: List files in target directory
         run: ls target
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Build image
+        run: -Dspring-boot.build-image.imageName=romansulymka/latest:tagname
+
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./Dockerfile
           push: true
           tags: romansulymka/latest:tagname
+
