--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -57,6 +57,8 @@ jobs:
       - name: Build image
         run: mvn spring-boot:build-image -Dspring-boot.build-image.imageName=romansulymka/latest:tagname
 
-      - name: Push
-        run: docker push romansulymka/latest:tagname
+      - name: Build and Push Docker image
+        run: |
+            docker build -t romansulymka/latest:tagname .
+            docker push romansulymka/latest:tagname
 
