--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -58,8 +58,7 @@ jobs:
         run: mvn spring-boot:build-image -Dspring-boot.build-image.imageName=romansulymka/latest:tagname
 
       - name: Push Docker image
-        run:
-            docker push romansulymka/latest:tagname
+        run: docker push romansulymka/latest:tagname
 
       - name: Deploy Docker image
         run: docker run -p 8080:8080 romansulymka/latest:tagname
