updated postgres connection url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/mywallet
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/mywallet
 spring.datasource.username=romansulymka
 spring.datasource.password=admin
 
