--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,38 +4,60 @@ services:
     image: postgres:14
     restart: always
     environment:
-      - POSTGRES_MULTIPLE_DATABASES=mywallet,analytics
+      - POSTGRES_DB=mywallet
+      - POSTGRES_DB2=analytics
       - POSTGRES_USER=romansulymka
       - POSTGRES_PASSWORD=admin
     ports:
       - '5432:5432'
-    healthcheck:
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
-  zookeeper:
+  zookeeper1:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
     restart: unless-stopped
 
-  kafka:
-    build: .
+  zookeeper2:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2182:2181"
+    restart: unless-stopped
+
+  zookeeper3:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2183:2181"
+    restart: unless-stopped
+
+  kafka1:
     image: bitnami/kafka
     ports:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper1:2181, zookeeper2:2181, zookeeper3:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_AUTO_OFFSET_RESET: earliest
       ALLOW_PLAINTEXT_LISTENER: "yes"
     restart: unless-stopped
 
-  quick-analytics:
+  kafka2:
+    image: bitnami/kafka
+    ports:
+      - "9093:9092"
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper1:2181, zookeeper2:2181, zookeeper3:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_AUTO_OFFSET_RESET: earliest
+      ALLOW_PLAINTEXT_LISTENER: "yes"
+    restart: unless-stopped
+
+  quick-analytics1:
     build:
       context: .
     image: romansulymka/quick-analytics
@@ -47,13 +69,38 @@ services:
     depends_on:
       - postgres
 
+  quick-analytics2:
+    build:
+      context: .
+    image: romansulymka/quick-analytics
+    restart: always
+    environment:
+      - POSTGRES_HOST=postgres
+    ports:
+      - '6061:6060'
+    depends_on:
+      - postgres
+
+  quick-analytics3:
+    build:
+      context: .
+    image: romansulymka/quick-analytics
+    restart: always
+    environment:
+      - POSTGRES_HOST=postgres
+    ports:
+      - '6062:6060'
+    depends_on:
+      - postgres
+
   app:
     build:
       context: .
     image: romansulymka/latest:tagname
-    restart: always
     environment:
       - POSTGRES_HOST=postgres
+      - POSTGRES_DB=mywallet
+      - JWT_SECRET_KEY=7134743777397A24432646294A404E635266556A586E3272357538782F412544
     ports:
       - '8080:8080'
     depends_on:
